crates/analyzer/tests/snapshots/errors__string_two_int_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `String` expects 1 generic argument, but 2 were provided
  ┌─ [snippet]:3:10
  │
3 │   let x: String<1, 2>
  │          ^^^^^^ -  - supplied 2 generic arguments
  │          │          
  │          expects 1 generic argument


